@@ -67,6 +67,7 @@ static bool preset_equal_classic_brush(const DP_ClassicBrush *a,
         && (in_eraser_slot || a->erase == b->erase)
         && a->colorpick == b->colorpick && a->smudge_alpha == b->smudge_alpha
         && a->pixel_perfect == b->pixel_perfect
+        && a->pixel_art_input == b->pixel_art_input
         && preset_equal_classic_brush_dynamic(&a->size_dynamic,
                                               &b->size_dynamic)
         && preset_equal_classic_brush_dynamic(&a->hardness_dynamic,
