@@ -1,5 +1,6 @@
 Unrelased Version 2.3.0-pre
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
+ * Feature: Pixel art input for pixel brushes, turns off all smoothing and makes the inputs apply immediately. Thanks Ben, dAVePAGE and Nilifin for reporting.
 
 2025-08-08 Version 2.3.0-beta.2
  * Fix: Make start dialog not flicker briefly on some systems.
